--- a/estrutura/textuais/introducao.tex
+++ b/estrutura/textuais/introducao.tex
@@ -16,13 +16,12 @@ Por fim, serão mencionadas as correlações entre o conteúdo visto em sala de 
 
 \subsection{Objetivo geral}
 \label{sec:objetivoGeral}
-Auxiliar no desenvolvimento dos ativos, soluções web desenvolvidas pela SEDES, participando de todas as atividades contempladas pelas etapas descritas no Modelo de Desenvolvimento de Software adotado pelo TRE-PB.  Para vistas deste relatório será utilizado como referência o projeto \imprimirtitulo. O sistema deve ser capaz de receber solicitações dos usuários e exibi-las em um painel onde o gestor deverá analisar os pedidos e montar as viagens adequando: rotas, disponibilidades dos motoristas e passageiros.
+Auxiliar no desenvolvimento dos ativos, soluções web desenvolvidas pela SEDES, participando de todas as atividades contempladas pelas etapas descritas no Modelo de Desenvolvimento de Software adotado pelo TRE-PB.  Para vistas deste relatório será utilizado como referência o projeto Veículos: Sistema de Gestão de Frotas do TRE-PB. O sistema deve ser capaz de receber solicitações dos usuários e exibi-las em um painel onde o gestor deverá analisar os pedidos e montar as viagens adequando: rotas, disponibilidades dos motoristas e passageiros.
 
 \subsection{Objetivos específicos}
 \label{sec:objetivosEspecificos}
 Contribuir na implementação do Sistema de Gestão de Frotas, quando possível oferecendo alternativas para a implementação mediante os conhecimentos adquiridos na graduação. Ganhar experiência com o fluxo de trabalho da uma equipe de desenvolvimento incorporando conceitos de metodologias ágeis e versionamento de código, sendo capaz de resolver conflitos de códigos, quando houver, e evitá-los. Trabalhar com reuniões diárias, planejar soluções com a modelagem do negócio especificando suas respectivas histórias de usuários, codificar utilizando as tecnologias e padrões adotados pela equipe, realizar entregas frequentes sempre buscando \textit{feedback} das \textit{releases} pelo cliente e gerar documentação explicando as funcionalidades e como utilizá-las. 
 
-% utilizar met. ágeis, trabalhar em equipe, participar de reuniões, documentar, especificar, implementar...
 
 \section{A Empresa}\footnote{http://www.tre-pb.jus.br/institucional/conheca-o-tre-pb/conheca-o-tre-pb}
 \label{sec:empresa}
@@ -60,7 +59,7 @@ Além desse capítulo, o relatório está dividido em outros três capítulos br
 
 \autoref{chap:embasamentoTeorico} - Embasamento Teórico: aborda as tecnologias e linguagens que foram utilizadas durante o estágio, bem como as definições necessárias para a compreensão do processo.
 
-\autoref{chap:atividadesRealizadas} - Atividades Realizadas: apresenta o projeto, no qual as atividades do estagiário foram realizadas, descrevendo os principais conceitos e funcionalidades. Relata as atividades realizadas ao longo do período de estágio descrevendo o fluxo e o processo de desenvolvimento e detalha a implementação de algumas funcionalidades.
+\autoref{chap:atividadesRealizadas} - Atividades Realizadas: apresenta a execução do Modelo de Desenvolvimento sobre a aplicação, onde foi possível atuar nos papéis de especificador e desenvolvedor. Descreve os principais conceitos e funcionalidades da aplicação e relata as atividades realizadas ao longo do período de estágio, descrevendo o fluxo e o processo de desenvolvimento, detalhando a implementação de algumas funcionalidades.
 
 % TODO: revisar texto, pois as considerações finais terá outra abordagem
 \autoref{chap:consideracoesFinais} – Considerações Finais: Apresenta um relato sobre as experiências adquiridas, metas e objetivos alcançados. O quão grande foi a contribuição do estágio na minha formação profissional.
