Revisão: Ajustes nas imagens

--- a/estrutura/textuais/desenvolvimento/embasamento-teorico.tex
+++ b/estrutura/textuais/desenvolvimento/embasamento-teorico.tex
@@ -20,13 +20,12 @@ No SCRUM, os projetos são divididos em Sprints, que são ciclos, geralmente men
 
 Ao término de uma sprint, a equipe apresenta o que foi implementado, em uma pequena reunião, chamada Sprint Review Meeting. Logo após, é feito um novo planejamento para a próxima Sprint, reiniciando o ciclo, conforme é ilustrado na \autoref{fig:figura-cicloSCRUM}.
 
-% TODO: corrigir imagem e incluir a fonte
 
 \begin{figure}[!htb]
     \centering
     \caption{Exemplo do cliclo SCRUM}
-    \includegraphics[width=0.5\textwidth]{./dados/figuras/cicloSCRUM}
-    \fonte{teste..}
+    \includegraphics[width=0.7\textwidth]{./dados/figuras/cicloSCRUM}
+    \fonte{Site Mindmaster}
     \label{fig:figura-cicloSCRUM}
 \end{figure}
 
