--- a/estrutura/textuais/introducao.tex
+++ b/estrutura/textuais/introducao.tex
@@ -61,5 +61,4 @@ Além desse capítulo, o relatório está dividido em outros três capítulos br
 
 \autoref{chap:atividadesRealizadas} - Atividades Realizadas: apresenta a execução do Modelo de Desenvolvimento sobre a aplicação, onde foi possível atuar nos papéis de especificador e desenvolvedor. Descreve os principais conceitos e funcionalidades da aplicação e relata as atividades realizadas ao longo do período de estágio, descrevendo o fluxo e o processo de desenvolvimento, detalhando a implementação de algumas funcionalidades.
 
-% TODO: revisar texto, pois as considerações finais terá outra abordagem
-\autoref{chap:consideracoesFinais} – Considerações Finais: Apresenta um relato sobre as experiências adquiridas, metas e objetivos alcançados. O quão grande foi a contribuição do estágio na minha formação profissional.
+\autoref{chap:consideracoesFinais} – Considerações Finais: Apresenta um relato sobre as experiências adquiridas através dos papéis executados durante as fases do projeto. Exibe dados de uso do sistema e esplana novas funcionalidades que ainda devem ser desenvolvidas.
