Retorno para o título original

--- a/estrutura/pre-textuais/capa.tex
+++ b/estrutura/pre-textuais/capa.tex
@@ -8,7 +8,7 @@
 % \departamento{}
 
 % DADOS DO TRABALHO--------------------------------------------------------------------------------------
-\titulo{Aplicação do Modelo de Desenvolvimento de Software no desenvolvimento do Sistema de Gestão de Frotas do TRE-PB}
+\titulo{Veículos: Sistema de Gestão de Frotas do TRE-PB}
 \titleabstract{Title in English}
 \autor{José Ricardo Bettini Pacola}
 \autorcitacao{PACOLA, José Ricardo Bettini} % Sobrenome em maiúsculo
